# prava_backend

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
app/: main.py
app/baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
app/baml_src/: clients.baml  generators.baml  training.baml
app/data/: Activities_2.csv  activity_17479144730 (1).tcx  activity_17497994381.tcx
app/templates/: index.html
app/utility/: handler_db.py  parse_csv_file.py  parse_tcx_file.py  types.py
experiments/: read_csv.ipynb
sql/: 001.sql
templates/: analyze.html  success.html
tests/: test_db.py
tests/test_data/: activity_16451967087.tcx  activity_16757941295.tcx
utility/: handler_db.py  logger_local.py  parse_file.py  queries_db.py  read_file.py  types_db.py
